--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
 
         </section>
+        <!-- ------------------WHAT WE DO SECTION START ------------------------ -->
         <section class="what-we-do ">
 
             <div class="top d-flex flex-column flex-lg-row justify-content-start">
@@ -38,7 +39,7 @@
                     <h5>what we do</h5>
                     <h2 class="header">services provided for you</h2>
                 </header>
-                <p class="para pt-5">
+                <p class="para pt-4">
                     Morbi sed lacus nec risus finibus feugiat et fermentum nibh. Pellentesque vitae ante at elit
                     fringilla ac at purus, Morbi sed lacus nec risus finibus feugiat et fermentum
                 </p>
@@ -51,43 +52,42 @@
 
                     <div class="carousel-item active">
                         <div class="row">
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/1.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/1.png" class="d-block w-100" alt="what-we-do" />
 
                             </div>
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/2.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/2.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/3.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/3.png" class="d-block w-100" alt="what-we-do" />
                             </div>
                         </div>
                     </div>
 
-
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/3.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/3.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/1.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/1.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/2.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/2.png" class="d-block w-100" alt="what-we-do" />
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/2.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/2.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/3.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/3.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class="col-md-6 col-lg-4 col-sm-12 mt-3">
-                                <img src="./src/images/1.png" class="d-block w-100" alt="..." />
+                            <div class=" col-4 mt-3">
+                                <img src="./src/images/carousel/1.png" class="d-block w-100" alt="what-we-do" />
                             </div>
                         </div>
                     </div>
@@ -104,12 +104,126 @@
                 </div>
             </div>
         </section>
+        <!--------------------- WHAT WE DO SECTION END -------->
 
-        <!-- OUR PROJECT SECTION -->
-        <section class="our-project">
+        <!--------------------- FEATURES SECTION START ---------------------------->
+        <section class="features text-center">
             <h5>our project</h5>
             <h2>why we are best</h2>
+            <div class="d-flex flex-column flex-xl-row text-start">
+                <div class="mt-5 px-4">
+                    <img src="./src/icons/features/vision.svg" alt="vision-thumb">
+                    <h3>Clarified Vision & Target</h3>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+                </div>
+
+                <div class="mt-5 px-4">
+                    <img src="./src/icons/features/performance.svg" alt="performance-thumb">
+                    <h3>High Performance</h3>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+                </div>
+
+                <div class="mt-5 px-4">
+                    <img src="./src/icons/features/security.svg" alt="security-thumb">
+                    <h3>Maintain Security</h3>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+                </div>
+
+                <div class="mt-5 px-4">
+                    <img src="./src/icons/features/strategy.svg" alt="strategy-thumb">
+                    <h3>Better Strategy & Quality</h3>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy.</p>
+                </div>
+            </div>
         </section>
+
+        <!-- -------------------FEATURES SECTION END -------------------------------->
+
+        <!-------------------- OUR PROJECT SECTION START --------------->
+        <section class="our-project text-center">
+            <h5>our project</h5>
+            <h2>why we are best</h2>
+            <div class="our-project-container d-flex flex-column flex-xl-row mt-5 justify-content-between">
+                <div class="">
+                    <img src="./src/images/our-project/image.png" class="img-fluid preview w-100"
+                        alt="our-project-thumb">
+                </div>
+                <div class="text-start container px-0 mx-0">
+                    <div class="black clickable p-4" onclick="ourProjectClick(event)" id='image-2.png'>
+                        <h3>Genderless Kei – Japan’s Hot</h3>
+                        <p>Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s offering lots of</p>
+                    </div>
+                    <div class=" primary clickable p-4" onclick="ourProjectClick(event)" id='image.png'>
+                        <h3>Better Strategy & Quality</h3>
+                        <p>Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s offering
+                            lots of</p>
+                    </div>
+                    <div class="black clickable p-4" onclick="ourProjectClick(event)" id='image-3.png'>
+                        <h3>Genderless Kei – Japan’s Hot</h3>
+                        <p>Set to launch on the manufacturer’s new A330neo aircraft in 2017, it’s offering lots of</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-------------------- OUR PROJECT SECTION end --------------->
+
+        <! ------------COMPANY GROWTH SECTION START- --------->
+            <section class="our-growth text-center">
+                <h5>experts growths</h5>
+                <h2>our company growth</h2>
+                <div class="cards d-flex flex-column flex-xl-row justify-content-between">
+                    <div class="mt-5  growth-card p-4">
+                        <img src="./src/icons/ourGrowth/heart.svg" width="40px" height="34px" alt="heart-svg">
+                        <h6 class="mt-1">199 +</h6>
+                        <h6 class="text">Satisfied Customers</h6>
+                    </div>
+
+                    <div class="mt-5  growth-card p-4">
+                        <img src="./src/icons/ourGrowth/clock.svg" width="40px" height="34px" alt="clock-svg">
+                        <h6 class="mt-1">1591 +</h6>
+                        <h6 class="text">Days Of Operation</h6>
+                    </div>
+
+                    <div class="mt-5  growth-card p-4">
+                        <img src="./src/icons/ourGrowth/complete.svg" width="40px" height="34px" alt="complete-svg">
+                        <h6 class="mt-1">283 +</h6>
+                        <h6 class="text">Complete Project</h6>
+                    </div>
+
+
+                    <div class="mt-5  growth-card p-4">
+                        <img src="./src/icons/ourGrowth/award.svg" width="40px" height="34px" alt="award-svg">
+                        <h6 class="mt-1">75 +</h6>
+                        <h6 class="text">Win Awards</h6>
+                    </div>
+            </section>
+            <!-- ------------COMPANY GROWTH SECTION END- --------- -->
+
+            <!---------------FEEDBACK SECTION ---------------->
+            <section class="feedback text-center">
+                <h5>client's feedback</h5>
+                <h2>people say's about us !</h2>
+                <blockquote class="text-start mt-3 blockquote-quoted">
+                    <p>Jannat Tumpa The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for
+                        those
+                        interested. Sections Bonorum et Malorum original.</p>
+                    <footer>
+                        <cite>JANNAT TUMPA <span class="text-muted">&nbsp;&#8211;&nbsp; COO, AMERIMAR ENTERPRISES,
+                                INC.</span></cite>
+                    </footer>
+
+                </blockquote>
+            </section>
+
+            <!---------------FEEDBACK SECTION END ---------------->
+
+
+            <!---------------FOOTER SECTION ---------------------->
+            <footer class="footer">
+                <img class="img-fluid" src="./src/images/Group 500.png" alt="logo-thumb">
+            </footer>
+
 
     </main>
 </body>
@@ -120,51 +234,58 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal contact-us fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered container-fluid">
-        <div class="modal-content">
-            <form action="https://getform.io/f/d505f6ab-2e5f-4892-bd59-6c85d7cc7a93" method="POST" class="row g-3 "
-                novalidate onsubmit="handleSubmit(event)">
-                <div class="modal-body p-4">
+        <div class="modal-content p-2">
+
+            <div class="modal-body p-4">
+                <form action="https://getform.io/f/d505f6ab-2e5f-4892-bd59-6c85d7cc7a93" method="POST"
+                    class="row g-3 needs-validation" novalidate onsubmit="handleSubmit(event)">
                     <h6 class="title p-2">Talk to us</h6>
 
                     <div class="form-outline my-4">
 
-                        <input type="email" id="work-email" class="form-control" name="work-email" required />
+                        <input onchange="modalInputChange(event)" type="email" id="work-email" class="form-control"
+                            name="work-email" required />
                         <hr class="my-0 mx-2">
                         <label class="text-muted form-label" for="email" value="">Work email*</label>
                     </div>
 
-                    <div class=" d-flex justify-content-between">
-                        <div class="form-outline my-4 d-inline-block ">
-                            <input type="text" id="first-name" class="form-control" name='first-name' required />
+                    <div style="gap: 1rem;" class=" px-0  d-flex flex-column flex-lg-row justify-content-between">
+                        <div class="form-outline my-4 d-inline ">
+                            <input onchange="modalInputChange(event)" type="text" id="first-name" class="form-control"
+                                name='first-name' required />
                             <hr class="my-0 mx-2">
                             <label class="text-muted form-label" for="first-name">First name*</label>
                         </div>
-                        <div class="form-outline my-4 d-inline-block ">
-                            <input type="text" id="last-name" class="form-control " name='last-name' required />
+                        <div class="form-outline my-4 ">
+                            <input onchange="modalInputChange(event)" type="text" id="last-name" class="form-control "
+                                name='last-name' required />
                             <hr class="my-0 mx-2">
                             <label class="text-muted form-label" for="last-name">Last name*</label>
                         </div>
                     </div>
                     <div class="form-check my-4">
-                        <input class="form-check-input " style="margin-right: 0;" type="checkbox" id="agreement" />
+                        <input class="form-check-input " style="margin-right: 0;" type="checkbox" id="agreement"
+                            required />
 
                         <label class="text-muted form-check-label mx-2" for="agreement" required>I agree to Fyle's terms
                             and
                             conditions, and
                             provide
                             consent to send me communication.</label>
+                        <div class="invalid-feedback">Please agree to terms and conditions.</div>
                     </div>
                     <button type="submit" class="btn btn-secondary d-block w-100">
                         Contact Us
                     </button>
-            </form>
+                </form>
+            </div>
+
+
         </div>
-
-
     </div>
-</div>
 </div>
 <!-- MDB -->
 <script src='./src/script.js' type="text/javascript"> </script>
