added responsiveness to carousel

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
                     <div class="carousel-item active">
                         <div class="row">
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3">
                                 <img src="./src/images/carousel/1.png" class="d-block w-100" alt="what-we-do" />
 
                             </div>
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3 hide">
                                 <img src="./src/images/carousel/2.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3 hide">
                                 <img src="./src/images/carousel/3.png" class="d-block w-100" alt="what-we-do" />
                             </div>
                         </div>
@@ -67,26 +67,26 @@
 
                     <div class="carousel-item">
                         <div class="row">
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3">
                                 <img src="./src/images/carousel/3.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3 hide">
                                 <img src="./src/images/carousel/1.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3 hide">
                                 <img src="./src/images/carousel/2.png" class="d-block w-100" alt="what-we-do" />
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3">
                                 <img src="./src/images/carousel/2.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3 hide">
                                 <img src="./src/images/carousel/3.png" class="d-block w-100" alt="what-we-do" />
                             </div>
-                            <div class=" col-4 mt-3">
+                            <div class=" col-lg-4 col-sm-12 mt-3 hide">
                                 <img src="./src/images/carousel/1.png" class="d-block w-100" alt="what-we-do" />
                             </div>
                         </div>
