--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <!--------------------- FEATURES SECTION START ---------------------------->
         <section class="features text-center">
-            <h5>our project</h5>
+            <h5>why choose us</h5>
             <h2>why we are best</h2>
             <div class="d-flex flex-column flex-xl-row text-start">
                 <div class="mt-5 px-4">
